--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-             <img src="campaigngamelogo.png" width= "60px">
+             <img src="https://cloud.githubusercontent.com/assets/13267202/9233274/fc422ede-40e6-11e5-818d-0249aefb5af0.png" width= "60px">
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -102,7 +102,7 @@
 
             <div class="col-md-3 col-sm-6 hero-feature">
                 <div class="thumbnail">
-                    <img src = "trump.jpg" id="trump" alt="Donald Trump">
+                    <img src = "https://cloud.githubusercontent.com/assets/13267202/9233272/fafc96b8-40e6-11e5-9bba-8fab94001555.jpg" id="trump" alt="Donald Trump">
                     <div class="caption">
                         <h3 id="name2">Donald Trump</h3>
                         <p id="bio2">Republican <br> (age 69); Born in New York, NY. American businessman and real estate developer</p>
@@ -115,7 +115,7 @@
 
             <div class="col-md-3 col-sm-6 hero-feature">
                 <div class="thumbnail">
-                    <img src= "cruz.jpg" id="cruz"alt="Ted Cruz">
+                    <img src= "https://cloud.githubusercontent.com/assets/13267202/9233275/ff63f58e-40e6-11e5-81e0-c1a3c276ec04.jpg" id="cruz"alt="Ted Cruz">
                     <div class="caption">
                         <h3 id="name3">Ted Cruz</h3>
                         <p id="bio3">Republican <br>(age 44); Born in Calgary, Canada. Junior United States Senator from Texas.</p>
