--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <img src="campaigngamelogo.png" width= "60px">
+                <img src="https://cloud.githubusercontent.com/assets/13267202/9233274/fc422ede-40e6-11e5-818d-0249aefb5af0.png" width= "60px">
              
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
