--- a/playpage.html
+++ b/playpage.html
@@ -62,7 +62,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-               <img src="campaigngamelogo.png" width= "60px">
+               <img src="https://cloud.githubusercontent.com/assets/13267202/9233274/fc422ede-40e6-11e5-818d-0249aefb5af0.png" width= "60px">
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -96,9 +96,9 @@
         </header>
         <hr>
         <!--CORRECT-->
-        <img id = "right" src = "right.png"> </img>
+        <img id = "right" src = "https://cloud.githubusercontent.com/assets/13267202/9233279/05591302-40e7-11e5-9f42-890ea50bf995.png"> </img>
         <!--INCORRECT-->
-        <img id = "wrong" src = "wrong.png"> </img>
+        <img id = "wrong" src = "https://cloud.githubusercontent.com/assets/13267202/9233278/03afa1d8-40e7-11e5-875d-fa492da7aa9d.png"> </img>
 
         <!-- Title -->
         <div class="row">
@@ -137,7 +137,7 @@
 
             <div class="col-md-3 col-sm-6 hero-feature">
                 <div class="thumbnail">
-                    <img id = "cruz" src="cruz.jpg" alt="Hillary Clinton">
+                    <img id = "cruz" src="https://cloud.githubusercontent.com/assets/13267202/9233275/ff63f58e-40e6-11e5-81e0-c1a3c276ec04.jpg" alt="Cruz">
                     <div class="caption">
                         <p>
                             <a href="#" id = "cruzButton" class="btn btn-default">Cruz</a>
@@ -148,7 +148,7 @@
 
             <div class="col-md-3 col-sm-6 hero-feature">
                 <div class="thumbnail">
-                    <img id = "bernie" src="https://upload.wikimedia.org/wikipedia/commons/d/de/Bernie_Sanders.jpg" alt="Hillary Clinton">
+                    <img id = "bernie" src="https://upload.wikimedia.org/wikipedia/commons/d/de/Bernie_Sanders.jpg" alt="bernie">
                     <div class="caption">
                  
                         <p>
