--- a/playpage.html
+++ b/playpage.html
@@ -125,7 +125,7 @@
 
             <div class="col-md-3 col-sm-6 hero-feature">
                 <div class="thumbnail">
-                    <img id = "trump" src="trump.jpg" alt="trump">
+                    <img id = "trump" src="https://cloud.githubusercontent.com/assets/13267202/9233272/fafc96b8-40e6-11e5-9bba-8fab94001555.jpg" alt="trump">
                     <div class="caption">
                  
                         <p>
