--- a/playpage.html
+++ b/playpage.html
@@ -21,7 +21,7 @@
 <!--WRONG/ RIGHT CSS-->
    <style>
    #right {
-    position: absolute
+    position: absolute;
     z-index: 2;
     top:10%;
     left:25%;
